<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="60sp"
        android:id="@+id/appTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/neon_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:id="@+id/appDescription"
        android:textSize="16sp"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="0dp"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/neon_blue"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/appDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_1"
        android:id="@+id/howTo1"
        android:textSize="15sp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_below="@+id/appDescription"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:prompt="@string/spinner_prompt"
        android:layout_below="@+id/howTo1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:spinnerMode="dialog"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_2"
        android:id="@+id/howTo2"
        android:textSize="15sp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/button"
        android:layout_below="@+id/howTo2"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/neon_blue"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:textSize="100sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/neon_blue"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:id="@+id/button2"
        android:layout_below="@+id/howTo2"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/neon_blue"
        android:textStyle="bold"
        android:layout_marginRight="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="false"
        android:onClick="refresh" />

</RelativeLayout>
